--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>edu.depaul.cdm.se</groupId>
-	<artifactId>sample-project</artifactId>
+	<artifactId>campusConnect</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>sample-project</name>
-	<description>Demo project for Spring Boot</description>
+	<name>campusConnect</name>
+	<description>A recreation of the class registration system used at DePaul University.</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -47,8 +47,7 @@
 <dependency>
     <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
-    <version>2.3.0</version>
- </dependency>		
+    </dependency>		
 		
 	</dependencies>
 
