--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
 /target/
 !.mvn/wrapper/maven-wrapper.jar
 
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
 ### STS ###
 .apt_generated
 .classpath
@@ -23,3 +34,7 @@
 /dist/
 /nbdist/
 /.nb-gradle/
+
+### MEGAN ###
+.DS_STORE
+/WebContent/META-INF/MANIFEST.MF
