--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,6 @@
 
 	<groupId>edu.depaul.cdm.se</groupId>
 	<artifactId>campusConnect</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
 	<name>CampusConnect</name>
@@ -43,7 +42,6 @@
 		<dependency>
 	        <groupId>org.mongodb</groupId>
 	        <artifactId>mongodb-driver</artifactId>
-	        <version>3.6.4</version>
 	    </dependency>
 		
 		<dependency>
@@ -67,7 +65,6 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 		    <groupId>javax.servlet.jsp.jstl</groupId>
@@ -79,6 +76,11 @@
 		    <groupId>org.apache.tomcat.embed</groupId>
 		    <artifactId>tomcat-embed-jasper</artifactId>
 		    <scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+		   <groupId>org.springframework.boot</groupId>
+		   <artifactId>spring-boot-starter-tomcat</artifactId>
 		</dependency>
 	</dependencies>
 
